made theme page, made theme sass maps

--- a/style/global/_body.scss
+++ b/style/global/_body.scss
@@ -1,6 +1,7 @@
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: $dark-base;
-    color:  $white;
+body {
+  @include dp-bg("00");
+
+  @media (prefers-color-scheme: dark) {
+    color: $white;
   }
 }
