--- a/style/global/_variables.scss
+++ b/style/global/_variables.scss
@@ -2,12 +2,42 @@ $white: #FFF;
 
 $dark-base: #121212;
 
-$dark-dp01: mix($white, $dark-base, 5%);
-$dark-dp02: mix($white, $dark-base, 7%);
-$dark-dp03: mix($white, $dark-base, 8%);
-$dark-dp04: mix($white, $dark-base, 9%);
-$dark-dp06: mix($white, $dark-base, 11%);
-$dark-dp08: mix($white, $dark-base, 12%);
-$dark-dp12: mix($white, $dark-base, 14%);
-$dark-dp16: mix($white, $dark-base, 15%);
-$dark-dp24: mix($white, $dark-base, 16%);
+$bg-map: (
+  "00": mix($white, $dark-base, 0%),
+  "01": mix($white, $dark-base, 5%),
+  "02": mix($white, $dark-base, 7%),
+  "03": mix($white, $dark-base, 8%),
+  "04": mix($white, $dark-base, 9%),
+  "06": mix($white, $dark-base, 11%),
+  "08": mix($white, $dark-base, 12%),
+  "12": mix($white, $dark-base, 14%),
+  "16": mix($white, $dark-base, 15%),
+  "24": mix($white, $dark-base, 16%)
+);
+
+$shadow-map: (
+  "00": none,
+  "01": (0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12), 0 1px 3px 0 rgba(0, 0, 0, .20)),
+  "02": (0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .12), 0 1px 5px 0 rgba(0, 0, 0, .20)),
+  "03": ( 0 3px 4px 0 rgba(0, 0, 0, .14), 0 3px 3px -2px rgba(0, 0, 0, .12), 0 1px 8px 0 rgba(0, 0, 0, .20)),
+  "04": (0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .20)),
+  "06": (0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .20)),
+  "08": (0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .20)),
+  "12": (0 12px 17px 2px rgba(0, 0, 0, .14), 0 5px 22px 4px rgba(0, 0, 0, .12), 0 7px 8px -4px rgba(0, 0, 0, .20)),
+  "16": (0 16px 24px 2px rgba(0, 0, 0, .14), 0 6px 30px 5px rgba(0, 0, 0, .12), 0 8px 10px -5px rgba(0, 0, 0, .20)),
+  "24": (0 24px 38px 3px rgba(0, 0, 0, .14), 0 9px 46px 8px rgba(0, 0, 0, .12), 0 11px 15px -7px rgba(0, 0, 0, .20))
+);
+
+@mixin dp-bg($dp) {
+  @media (prefers-color-scheme: dark) {
+    background-color: map-get($bg-map, $dp);
+  }
+
+  @media (prefers-color-scheme: light) {
+    background-color: $white;
+  }
+}
+
+@mixin dp-shadow($dp) {
+  box-shadow: map-get($shadow-map, $dp);
+}
