--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -1,6 +1,9 @@
 nav {
+  @include dp-bg("08");
+  @include dp-shadow("08");
   display: flex;
   justify-content: center;
+  align-items: center;
   .nav {
     display: inline-flex;
 
@@ -10,5 +13,14 @@ nav {
         margin-left: 0px;
       }
     }
+  }
+}
+
+@include media-breakpoint-down("sm") {
+  nav {
+    position: fixed;
+    width: 100%;
+    bottom: 0px;
+    height: 75px;
   }
 }
