--- a/style/components/_hero.scss
+++ b/style/components/_hero.scss
@@ -2,11 +2,25 @@
   overflow: hidden;
   position: relative;
 
+  .container {
+    z-index: 1;
+  }
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.35);
+    width: 100%;
+    height: 100%;
+  }
+
   video {
     position: absolute;
     z-index: -1;
     top: 0;
     max-width: none;
+    filter: blur(75px);
 
    @include media-breakpoint-up("xl") {
       @media (min-aspect-ratio: 16/9) {
