--- a/style/global/_variables.scss
+++ b/style/global/_variables.scss
@@ -2,6 +2,8 @@ $white: #FFF;
 
 $dark-base: #121212;
 
+$red: #fe0034;
+
 $bg-map: (
   "00": mix($white, $dark-base, 0%),
   "01": mix($white, $dark-base, 5%),
