--- a/style/global/_body.scss
+++ b/style/global/_body.scss
@@ -1,7 +1,11 @@
-body {
-  @include dp-bg("00");
+html {
+  overflow-y: scroll;
 
-  @media (prefers-color-scheme: dark) {
-    color: $white;
+  body {
+    @include dp-bg("00");
+  
+    @media (prefers-color-scheme: dark) {
+      color: $white;
+    }
   }
 }
