--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -20,9 +20,12 @@ nav {
       }
 
       &.active {
-        border-bottom: 2px solid $white;
-        color: $white;
-        font-weight: 500;
+        border-bottom: 2px solid $dark-base;
+        font-weight: 600;
+
+        @media (prefers-color-scheme: dark) {
+          border-color: $white;
+        }
       }
     }
   }
