--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -39,7 +39,7 @@ nav {
         margin-left: 0px;
       }
 
-      &.active {
+      > .active {
         border-bottom: 2px solid $dark-base;
         font-weight: 600;
 
