basic dark theme, atomic component setup, form field

--- a/src/style/_colours.scss
+++ b/src/style/_colours.scss
@@ -1,8 +1,8 @@
-$yellow: "#efa118";
-$dark-grey: "#3f3d3d";
-$med-grey: "#7d7b7a";
-$light-grey: "#bbbab7";
-$white: "#faf9f5";
+$yellow: #efa118;
+$dark-grey: #3f3d3d;
+$med-grey: #7d7b7a;
+$light-grey: #bbbab7;
+$white: #faf9f5;
 
 $brand: $yellow;
 $base: $dark-grey;
