--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,4 +2,22 @@
 
 html {
   font-family: "Outfit", sans-serif;
+  color: $white;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: revert;
+}
+
+body {
+  background: $base;
+}
+
+main {
+  min-height: 100vh;
 }
