simplify sass, simplify routes

--- a/src/style/_colours.scss
+++ b/src/style/_colours.scss
@@ -1,9 +1,19 @@
+$dp00: #121212;
+$dp01: #1d1d1d;
+$dp02: #212121;
+$dp03: #242424;
+$dp04: #272727;
+$dp06: #2c2c2c;
+$dp08: #2d2d2d;
+$dp12: #323232;
+$dp16: #353535;
+$dp24: #373737;
+
 $yellow: #efa118;
-$dark-grey: #3f3d3d;
 $med-grey: #7d7b7a;
 $light-grey: #bbbab7;
 $white: #faf9f5;
 
 $brand: $yellow;
-$base: $dark-grey;
+$base: $dp00;
 $accent: $white;
